--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -32,14 +32,15 @@
                 </div>
                     <div id ="schlussel2">
                         <input id="removeButton" type="button" value="-">
-                        <input id="addButton" type="button" value="+">
                         <select id="countKeySelect" onchange="selectKey(event.target.value)">
                         </select>
+                        <input id="addButton" type="button" value="+">
+                     
                 </div>
             </div>
             <div id="itemKeyBlock">
                 <div  class="TexCount">
-                        <input type="text" required readonly style="position: relative;background: gray;" name="FurNameKey" value="1" />
+                        <input type="text" required readonly style="position: relative;background:none;border:none;text-align: center; " name="FurNameKey" value="1" />
                     <div id="TexInputKey">
                        <input id="inputS" required name="NameKey"  onchange="chekedNameArienKey(event.target.value,1)" placeholder="Name des Schlüssels" type="text" />
                     </div>
@@ -56,14 +57,18 @@
                     <h5>Pos</h5>   
                 </div>
                     <div id="schlussel">
-                        <h5 style="margin-left: 60px;">Türbezeichnung</h5>
+                        <h5 >Türbezeichnung</h5>
                </div>
-                    <div id="schlussel" style="margin-left:120px">
+                    <div id="schlussel" >
                         <h5>Zylindertyp</h5>
                </div>
 
-                    <div id="schlussel" style="text-align: center;margin-left:60px">
-                        <h5>Zylinderlänge mm</h5>
+                    <div id="schlussel">
+                        <h5>Zylinderlänge </h5>
+                        <div style="display:flex;gap: 20px;">
+                            <h6>außen <br /> mm</h6>
+                            <h6>innen  <br /> mm</h6>
+                        </div>
                     </div>
                 <div id="schlussel3">
                         <h5>Stück</h5>
@@ -83,7 +88,7 @@
                             </div>
                                     <div>
 
-                                    <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="25" width="40" />
+                                    <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="40" width="40" />
                                     
                                     </div>
 
@@ -132,11 +137,9 @@
             </div>
                 <div id="add_And_Minus">
 
-                    <select id="countTurSelect" onchange="selectTur(event.target.value)">
-                       
-                    </select>
-
                     <input id="removeButtonTur" type="button" value="-">
+                    <select id="countTurSelect" onchange="selectTur(event.target.value)">
+                    </select>
                     <input id="addButtonTur" type="button" value="+">
                 </div>
         </div>
@@ -697,7 +700,7 @@
 
                                             <div>
 
-                                                 <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="25" width="40"  />
+                                                 <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="40" width="40"  />
 
                                             </div>
                                     </div>
@@ -809,7 +812,7 @@
         newBlock.id = 'TexCount-' + blockCount;
         newBlock.innerHTML = `
                                <div  class="TexCount">
-                                             <input type="text" readonly required  name="FurNameKey" style="position: relative;background: gray;" value="${blockCount}" />
+                                     <input type="text" readonly required  name="FurNameKey" style="position: relative;background:none;border:none;text-align: center;" value="${blockCount}" />
                             <div id="TexInputKey">
                                     <input id="inputS" required name="NameKey" onchange="chekedNameArienKey(event.target.value,${blockCount})" placeholder="Name des Schlüssels" type="text" />
                             </div>
@@ -865,12 +868,12 @@
             newBlock.id = 'TexCount-' + blockCount;
             newBlock.innerHTML = `
                                    <div  class="TexCount">
-                                             <input type="text" required  name="FurNameKey" style="position: relative;background: gray;" value="${blockCount}" />
+                                         <input type="text" required  name="FurNameKey" style="position: relative;background:none;border:none;text-align: center;" value="${blockCount}" />
                                 <div id="TexInputKey">
                                         <input id="inputS" required name="NameKey" onchange="chekedNameArienKey(event.target.value,${blockCount})" placeholder="Name des Schlüssels" type="text" />
                                 </div>
                                 <div>
-                                             <input id="inputCount" required name="CountKey" value="1" type="text" />
+                                   <input id="inputCount" required name="CountKey" value="1" type="text" />
                                 </div>
                             </div>
 
@@ -926,7 +929,7 @@
                                             </div>
 
                                                 <div>
-                                                     <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="25" width="40"  />
+                                                     <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="40" width="40"  />
                                                 </div>
                                         </div>
 
